--- a/eugene/doc/Fiches.tex
+++ b/eugene/doc/Fiches.tex
@@ -29,28 +29,55 @@
 
 \section{Fiches actives}
 
+\begin{longtable}{|l|p{7cm}|}\hline
+  Quoi & Sp\'ecifier l'ajout de la pr\'ediction d'\'epissage alternatif dans
+  l'algorithme de PD. \\\hline
+  Quand  &  Oct 2003\\\hline
+  Difficult\'e & 2 mois \\\hline
+  Priorit\'e &  0.8\\\hline
+  Qui & Responsable: SF . Soutien de TS\\\hline
+  Statut & \\\hline
+\end{longtable}
 
 \begin{longtable}{|l|p{7cm}|}\hline
-  Quoi & \'Economiser la m\'emoire: \'economie des tableaux de taille egale a celle de la s\'equence dans les sensors et Choice \\\hline
-  Quand  &  Nov. 2002\\\hline
-  Difficult\'e &  2 semaines\\\hline
-  Priorit\'e & 0.9 \\\hline
-  Qui & Responsable: PS. Soutien de TS\\\hline
-  Statut & a faire\\\hline
+  Quoi & Cr\'eation d'un sensor bas\'e sur des MTD acides amin\'es.\\\hline
+  Quand  &  Sep 2003\\\hline
+  Difficult\'e &  1 mois\\\hline
+  Priorit\'e &  0.9 \\\hline
+  Qui & Responsable: Xavier. Soutien de TS/SF\\\hline
+  Statut & \`A faire\\\hline
+\end{longtable}
+
+\begin{longtable}{|l|p{7cm}|}\hline
+  Quoi & sim2eugene: finir\\\hline
+  Quand  &  Septembre 2003\\\hline
+  Difficult\'e &  une semaine \\\hline
+  Priorit\'e &  0.9\\\hline
+  Qui & Responsable: PB.\\\hline
+  Statut & \\\hline
+\end{longtable}
+
+\begin{longtable}{|l|p{7cm}|}\hline
+  Quoi & Am\'eliorer/\'Evaluer EuG\`ene Riz sur la base des mRNA.\\\hline
+  Quand  & Permanent\\\hline
+  Difficult\'e & $n$ semaines \\\hline
+  Priorit\'e & 1 (absolument indispensable, li\'e au projet) \\\hline
+  Qui & Responsable: PB. Soutien de SF, TS, AM\\\hline
+  Statut & En attente des s\'equences tests\\\hline
 \end{longtable}
 
 \begin{longtable}{|l|p{7cm}|}\hline
   Quoi & Introduire une classe ``pr\'ediction'' pour remplacer Choice, Fixer Output.cc pour qu'il traite les frameshits.\\\hline
   Quand  &  Nov. 2002\\\hline
   Difficult\'e &  1 semaines\\\hline
-  Priorit\'e & 0.9 \\\hline
+  Priorit\'e & 0.99 \\\hline
   Qui & Responsable: PS. Soutien de TS\\\hline
-  Statut & a faire\\\hline
+  Statut & reste a peufiner Output.cc pour les frameshifts. Sortie graphique ?\\\hline
 \end{longtable}
 
 \begin{longtable}{|l|p{7cm}|}\hline
   Quoi & Documentation utilisateur au format LaTeX\\\hline
-  Quand  &  Nov. 2002\\\hline
+  Quand  &  tout le temps\\\hline
   Difficult\'e &  permanente\\\hline
   Priorit\'e &  0.9 \\\hline
   Qui & Responsable: TS. Soutien de Tous\\\hline
@@ -75,80 +102,97 @@
   Statut & En cours\\\hline
 \end{longtable}
 
-\begin{longtable}{|l|p{7cm}|}\hline
-  Quoi & D\'efinir des r\`egles de d\'eveloppement minimales (XP/RUP,Style C++)\\\hline
-  Quand  & Nov. 2002 \\\hline
-  Difficult\'e & 1 mois \\\hline
-  Priorit\'e &  0.9 \\\hline
-  Qui & Responsable: MJC. Soutien de TS \\\hline
-  Statut & En cours. Le style est fix\'e. L'utilisation de XP est en
-  cours d'adaptation.\\\hline
-\end{longtable}
-
-\begin{longtable}{|l|p{7cm}|}\hline
-  Quoi & Ajouter les frameshifts au mod\`ele. Avec une \'eventuelle
-  p\'enalite locale (via les Sensors). Il faudra de ce fait revoir la
-  sortie texte et graphique (visualisation des FS predits)\\hline
-  Quand  &  D\'ecembre 2002 \\\hline
-  Difficult\'e &  2 semaines\\\hline
-  Priorit\'e &  0.8\\\hline
-  Qui & Responsable: TS. Soutien de SF,PB\\\hline
-  Statut & En cours. Le sensor avec cout local n'existe pas. Il faut
-  encore modifier Output.cc pour prendre en compte le nouveau type de
-  pr\'ediction\\\hline 
-\end{longtable}
-
-\begin{longtable}{|l|p{7cm}|}\hline
-  Quoi & Voir comment les Sensors (v1) peuvent passer en plugins
-  chargeables dynamiquement avec dlopen\ldots.\\\hline
-  Quand  &  Janvier 2003\\\hline
-  Difficult\'e &  2 \`a 3 semaines\\\hline
-  Priorit\'e &  0.8\\\hline
-  Qui & Responsable: TS. Soutien de PB \\\hline
-  Statut & En cours.\\\hline
-\end{longtable}
-
-\begin{longtable}{|l|p{7cm}|}\hline
-  Quoi & Cr\'eation d'un sensor bas\'e sur des mod\`eles de Markov acides amin\'es.\\\hline
-  Quand  &  Nov. 2002\\\hline
-  Difficult\'e &  2 semaines\\\hline
-  Priorit\'e &  0.9 \\\hline
-  Qui & Responsable: SF. Soutien de TS\\\hline
-  Statut & En cours\\\hline
-\end{longtable}
-
-\section{Fiches achev\'ees}
-
-\begin{longtable}{|l|p{7cm}|}\hline
-  Quoi & Introduire une classe ``Param\`etres'' charg\'ee de lire le .par
-  et de distribuer le contenu \`a Eug\`ene et aux plugins.  \\\hline
-  Quand  &  Oct. 2002 \\\hline
-  Difficult\'e &  1 semaine \\\hline
-  Priorit\'e &  0.95 \\\hline
-  Qui & Responsable: PB. Soutien de TS\\\hline
-  Statut & Effectu\'e\\\hline
-\end{longtable}
-
-
-\begin{longtable}{|l|p{7cm}|}\hline
-  Quoi & \'Eviter les probl\`emes de perte de pr\'ecision en flottant dans
-  l'algo de PD.\\\hline
-  Quand  &  D\'ec. 2002\\\hline
-  Difficult\'e & 1 semaine \\\hline
-  Priorit\'e &  0.9 \\\hline
-  Qui & Responsable: TS. Soutien de personne (snif !)\\\hline
-  Statut & Effectu\'e\\\hline
-\end{longtable}
 
 \section{Fiches \`a entamer}
 
 \begin{longtable}{|l|p{7cm}|}\hline
-  Quoi & Sensor Mod\`ele de Markov a GC\% multiples\\\hline
-  Quand  &  Dec. 2002 \\\hline
-  Difficult\'e &  2 semaines \\\hline
+  Quoi & Analyser le comportement des 2 matrices GC\% distinctes\\\hline
+  Quand  &  Septembre 2003 \\\hline
+  Difficult\'e & deux semaines \\\hline
+  Priorit\'e &  0.9\\\hline
+  Qui & Responsable: AM. Soutien de TS\\\hline
+  Statut & \\\hline
+\end{longtable}
+
+\begin{longtable}{|l|p{7cm}|}\hline
+  Quoi Modifier d\'es\'equilibre des tailles de jeux d'apprentissage IG/Intron& \\\hline
+  Quand  &  Septembre 2003\\\hline
+  Difficult\'e & 2 jours \\\hline
   Priorit\'e &  0.9 \\\hline
+  Qui & Responsable: TS\\\hline
+  Statut & \\\hline
+\end{longtable}
+
+\begin{longtable}{|l|p{7cm}|}\hline
+  Quoi & Estimer deux fichiers .par pour les 2 GC\%\ du Riz\\\hline
+  Quand  &  Septembre 2003\\\hline
+  Difficult\'e &  une semaine\\\hline
+  Priorit\'e &  \\\hline
+  Qui & Responsable: PB.\\\hline
+  Statut & \\\hline
+\end{longtable}
+
+\begin{longtable}{|l|p{7cm}|}\hline
+  Quoi & Essayer ATG Pred seul\\\hline
+  Quand  &  Septembre 2003\\\hline
+  Difficult\'e &  une semaine \\\hline
+  Priorit\'e &  0.9\\\hline
+  Qui & Responsable: PB.\\\hline
+  Statut & \\\hline
+\end{longtable}
+
+\begin{longtable}{|l|p{7cm}|}\hline
+  Quoi & EuGene$\Omega$: ajouter RepeatMasker\\\hline
+  Quand  & Sep 2003 \\\hline
+  Difficult\'e & une semaine \\\hline
+  Priorit\'e & 0.5 \\\hline
+  Qui & Responsable: SF. Soutien de PB\\\hline
+  Statut & ouvert\\\hline
+\end{longtable}
+
+\begin{longtable}{|l|p{7cm}|}\hline
+  Quoi & EuGene$\Omega$: int\'egrer le nouveau parser Blast de Laurent\\\hline
+  Quand  & Oct 2003 \\\hline
+  Difficult\'e & une semaine \\\hline
+  Priorit\'e & 0.5 \\\hline
+  Qui & Responsable: SF. Soutien de PB\\\hline
+  Statut & ouvert\\\hline
+\end{longtable}
+
+\begin{longtable}{|l|p{7cm}|}\hline
+  Quoi & EuG\`ene$\Omega$: rajouter l'homme aux mod\`eles\\\hline
+  Quand  & Fin 2003 \\\hline
+  Difficult\'e &  deux semaines\\\hline
+  Priorit\'e & 0.5 \\\hline
+  Qui & Responsable: SF. Soutien de PB\\\hline
+  Statut & ouvert\\\hline
+\end{longtable}
+
+\begin{longtable}{|l|p{7cm}|}\hline
+  Quoi & Mettre \`a jour le site WEB EuG\`ene (http://www.inra.fr/bia/T/EuGene/). Le site est sur ossau dans /home/w3/T/EuGene\\\hline
+  Quand  &  Des que possible \\\hline
+  Difficult\'e &  2 jours \\\hline
+  Priorit\'e &  0.8 \\\hline
+  Qui & Responsable: PB. Soutien de SF/TS\\\hline
+  Statut & a entamer\\\hline
+\end{longtable}
+
+\begin{longtable}{|l|p{7cm}|}\hline
+  Quoi & Exploiter le Sensor Tester pour faire des ROC automatiques (gnuplot)\\\hline
+  Quand  &  Sep. 2003\\\hline
+  Difficult\'e &  1 semaine \\\hline
+  Priorit\'e &  0.8\\\hline
+  Qui & Responsable: AM. Soutien de TS\\\hline
+  Statut & Ouvert\\\hline
+\end{longtable}
+
+\begin{longtable}{|l|p{7cm}|}\hline
+  Quoi & Faire une remise a l'\'echelle des Sensors sur la base d'une analyse de la proba conditionnelle (type Res. Bay\'esien)\\\hline
+  Quand  &  avant fin 2003\\\hline
+  Difficult\'e &  un mois\\\hline
+  Priorit\'e &  0.5 \\\hline
   Qui & Responsable: TS. Soutien de PB\\\hline
-  Statut & A faire.\\\hline
+  Statut & Ouvert\\\hline
 \end{longtable}
 
 \begin{longtable}{|l|p{7cm}|}\hline
@@ -162,37 +206,15 @@
 \end{longtable}
 
 \begin{longtable}{|l|p{7cm}|}\hline
-  Quoi & Cr\'eer un Sensor ``s\'equences homologues'' bas\'e sur les scores
-  de la matrice de similarit\'e \\\hline
-  Quand  & Nov. 2002 \\\hline
-  Difficult\'e &  2 semaines\\\hline
-  Priorit\'e &  0.9 \\\hline
-  Qui & Responsable: SF. Soutien de AM\\\hline
-  Statut & En cours\\\hline
-\end{longtable}
-
-\begin{longtable}{|l|p{7cm}|}\hline
-  Quoi & D\`es lors que les s\'equences de Riz seront disponible, il faut
-  pr\'eparer une premi\`ere version EuG\`ene sur la base des mRNA. Cela
-  n{\'e}cessite de permettre l'utilisation de plusieurs modele (GC\%)
-  et de r\'eestimer les param\`etres.\\\hline
-  Quand  & Novembre 2002 \\\hline
-  Difficult\'e & deux semaines \\\hline
-  Priorit\'e & 1 (absolument indispensable, li\'e au projet) \\\hline
-  Qui & Responsable: PB. Soutien de SF, TS\\\hline
-  Statut & En attente des s\'equence\\\hline
+  Quoi & Inclure l'optimisation des parametres dans EuG\`ene\\\hline
+  Quand  &  Sep. 2003\\\hline
+  Difficult\'e & 1 mois \\\hline
+  Priorit\'e & 0.7\\\hline
+  Qui & Responsable: MJC. Soutien de SF/TS\\\hline
+  Statut & a faire.\\\hline
 \end{longtable}
 
 \section{Fiches futures ou optionnelles}
-
-\begin{longtable}{|l|p{7cm}|}\hline
-  Quoi & Inclure l'optimisation des parametres dans EuG\`ene\\\hline
-  Quand  &  Fev. 2003\\\hline
-  Difficult\'e & 3 semaines \\\hline
-  Priorit\'e & 0.7\\\hline
-  Qui & Responsable: PB. Soutien de SF\\\hline
-  Statut & a faire.\\\hline
-\end{longtable}
 
 \begin{longtable}{|l|p{7cm}|}\hline
   Quoi & Complexifier le type ``REAL'' en un co\^ut alg\'ebrique
@@ -201,35 +223,6 @@
   Difficult\'e &  2 semaines\\\hline
   Priorit\'e &  0.9\\\hline
   Qui & Responsable: TS. Soutien de SF\\\hline
-  Statut & \`A faire\\\hline
-\end{longtable}
-
-
-\begin{longtable}{|l|p{7cm}|}\hline
-  Quoi & \'Ecrire des sensors de signaux PWM/WAM g\'en\'eraux\\\hline
-  Quand  &  Avr. 2003\\\hline
-  Difficult\'e &  2 semaines\\\hline
-  Priorit\'e &  0.8 \\\hline
-  Qui & Responsable: PB. Soutien de TS, SF\\\hline
-  Statut & \`A faire\\\hline
-\end{longtable}
-
-\begin{longtable}{|l|p{7cm}|}\hline
-  Quoi & Sp\'ecifier l'ajout de la pr\'ediction d'\'epissage alternatif dans
-  l'algorithme de PD. \\\hline
-  Quand  &  Mars 2003\\\hline
-  Difficult\'e & 3 semaines \\\hline
-  Priorit\'e &  0.8\\\hline
-  Qui & Responsable: TS . Soutien de SF\\\hline
-  Statut & \\\hline
-\end{longtable}
-
-\begin{longtable}{|l|p{7cm}|}\hline
-  Quoi & Cr\'eation d'un sensor bas\'e sur des MTD acides amin\'es.\\\hline
-  Quand  &  Mars 2003\\\hline
-  Difficult\'e &  3 semaines\\\hline
-  Priorit\'e &  0.9 \\\hline
-  Qui & Responsable: SF. Soutien de TS\\\hline
   Statut & \`A faire\\\hline
 \end{longtable}
 
@@ -253,7 +246,7 @@
 
 \begin{longtable}{|l|p{7cm}|}\hline
   Quoi & Concevoir et \'ecrire un sensor ``fusionneur de sensor''
-  (Bay\'esien naif ou non par exemple). D\'ecrire EuG\`ene comme un r\'eeau
+  (Bay\'esien naif ou non par exemple). D\'ecrire EuG\`ene comme un r\'eseau
   bay\'esien dynamique\\\hline
   Quand  &  Mai 2003\\\hline
   Difficult\'e & 1 mois \\\hline
@@ -264,15 +257,13 @@
  
 \begin{longtable}{|l|p{7cm}|}\hline
   Quoi & Remise \`a jour des pr\'ediction en cas de modification
-  incr\'ementale des sorties sensorse\\\hline
+  incr\'ementale des sorties sensors\\\hline
   Quand  &  Non born\'e\\\hline
   Difficult\'e &  un an \\\hline
   Priorit\'e &  0.6\\\hline
   Qui & Responsable: TS. Soutien de Tous\\\hline
   Statut & Tout est \`a faire\\\hline
 \end{longtable}
-
-
 
 \begin{longtable}{|l|p{7cm}|}\hline
   Quoi & Sp\'ecification d'une interface entre Eugene C++ et une interface
@@ -292,7 +283,6 @@ Java (par exemple)\\\hline
   Qui & Responsable: PB. Soutien de MJC, AM, TS.\\\hline
   Statut & non ouvert \\\hline
 \end{longtable}
-
 
 \begin{longtable}{|l|p{7cm}|}\hline
   Quoi & Specification, conception d'un sensor ``pattern matcher'' AA/ADN \\\hline
@@ -333,6 +323,15 @@ cognat/proteines \\\hline
 \end{longtable}
 
 \begin{longtable}{|l|p{7cm}|}\hline
+  Quoi & Prendre en compte des p\'enalites de longueur ?\\\hline
+  Quand  &  Fin 2003\\\hline
+  Difficult\'e &  un mois \\\hline
+  Priorit\'e & 0.5 \\\hline
+  Qui & Responsable: TS\\\hline
+  Statut & non ouvert\\\hline
+\end{longtable}
+
+\begin{longtable}{|l|p{7cm}|}\hline
   Quoi & Structure du graphe modifiable par l'utilisateur: specifier
 langage/algo \\\hline
   Quand   & Mai 2004 \\\hline
@@ -342,5 +341,119 @@ langage/algo \\\hline
   Statut & non ouvert\\\hline
 \end{longtable}
 
+\begin{longtable}{|l|p{7cm}|}\hline
+  Quoi & Faire un sensor WAM STop\\\hline
+  Quand  &  Dec 2003\\\hline
+  Difficult\'e & une semaine\\\hline
+  Priorit\'e &  0.6\\\hline
+  Qui & Responsable: SF  Soutien de TS\\\hline
+  Statut & non ouvert\\\hline
+\end{longtable}
+
+\section{Fiches achev\'ees}
+
+\begin{longtable}{|l|p{7cm}|}\hline
+  Quoi & \'Ecrire des sensors de signaux PWM/WAM g\'en\'eraux\\\hline
+  Quand  &  Avr. 2003\\\hline
+  Difficult\'e &  2 semaines\\\hline
+  Priorit\'e &  0.8 \\\hline
+  Qui & Responsable: PB. Soutien de TS, SF\\\hline
+  Statut & \`A faire\\\hline
+\end{longtable}
+
+\begin{longtable}{|l|p{7cm}|}\hline
+  Quoi & Ajouter les frameshifts au mod\`ele. Avec une \'eventuelle
+  p\'enalite locale (via les Sensors). \\hline
+  Quand  &  D\'ecembre 2002 \\\hline
+  Difficult\'e &  2 semaines\\\hline
+  Priorit\'e &  0.8\\\hline
+  Qui & Responsable: TS. Soutien de SF,PB\\\hline
+  Statut & done.\\\hline 
+\end{longtable}
+
+\begin{longtable}{|l|p{7cm}|}\hline
+  Quoi & Cr\'eation d'un sensor bas\'e sur des mod\`eles de Markov acides amin\'es.\\\hline
+  Quand  &  Nov. 2002\\\hline
+  Difficult\'e &  2 semaines\\\hline
+  Priorit\'e &  0.9 \\\hline
+  Qui & Responsable: SF. Soutien de TS\\\hline
+  Statut & En cours\\\hline
+\end{longtable}
+ 
+\begin{longtable}{|l|p{7cm}|}\hline
+  Quoi & Voir comment les Sensors (v1) peuvent passer en plugins
+  chargeables dynamiquement avec dlopen\ldots.\\\hline
+  Quand  &  Janvier 2003\\\hline
+  Difficult\'e &  2 \`a 3 semaines\\\hline
+  Priorit\'e &  0.8\\\hline
+  Qui & Responsable: TS. Soutien de PB \\\hline
+  Statut & En cours.\\\hline
+\end{longtable}
+
+\begin{longtable}{|l|p{7cm}|}\hline
+  Quoi & D\'efinir des r\`egles de d\'eveloppement minimales (XP/RUP,Style C++)\\\hline
+  Quand  & Nov. 2002 \\\hline
+  Difficult\'e & 1 mois \\\hline
+  Priorit\'e &  0.9 \\\hline
+  Qui & Responsable: MJC. Soutien de TS \\\hline
+  Statut & En cours. Le style est fix\'e. L'utilisation de XP est en
+  cours d'adaptation.\\\hline
+\end{longtable}
+
+\begin{longtable}{|l|p{7cm}|}\hline
+  Quoi & \'Economiser la m\'emoire: \'economie des tableaux de taille egale a celle de la s\'equence dans les sensors et Choice \\\hline
+  Quand  &  Nov. 2002\\\hline
+  Difficult\'e &  2 semaines\\\hline
+  Priorit\'e & 0.9 \\\hline
+  Qui & Responsable: PS. Soutien de TS\\\hline
+  Statut & a faire\\\hline
+\end{longtable}
+
+\begin{longtable}{|l|p{7cm}|}\hline
+  Quoi & Introduire une classe ``Param\`etres'' charg\'ee de lire le .par
+  et de distribuer le contenu \`a Eug\`ene et aux plugins.  \\\hline
+  Quand  &  Oct. 2002 \\\hline
+  Difficult\'e &  1 semaine \\\hline
+  Priorit\'e &  0.95 \\\hline
+  Qui & Responsable: PB. Soutien de TS\\\hline
+  Statut & Effectu\'e\\\hline
+\end{longtable}
+
+\begin{longtable}{|l|p{7cm}|}\hline
+  Quoi & \'Eviter les probl\`emes de perte de pr\'ecision en flottant dans
+  l'algo de PD.\\\hline
+  Quand  &  D\'ec. 2002\\\hline
+  Difficult\'e & 1 semaine \\\hline
+  Priorit\'e &  0.9 \\\hline
+  Qui & Responsable: TS. Soutien de personne (snif !)\\\hline
+  Statut & Effectu\'e\\\hline
+\end{longtable}
+
+\begin{longtable}{|l|p{7cm}|}\hline
+  Quoi & Cr\'eer un Sensor ``s\'equences homologues'' bas\'e sur les scores
+  de la matrice de similarit\'e \\\hline
+  Quand  & Nov. 2002 \\\hline
+  Difficult\'e &  2 semaines\\\hline
+  Priorit\'e &  0.9 \\\hline
+  Qui & Responsable: SF. Soutien de AM\\\hline
+  Statut & En cours\\\hline
+\end{longtable}
+
+\begin{longtable}{|l|p{7cm}|}\hline
+  Quoi & Sensor Mod\`ele de Markov a GC\% multiples\\\hline
+  Quand  &  Dec. 2002 \\\hline
+  Difficult\'e &  2 semaines \\\hline
+  Priorit\'e &  0.9 \\\hline
+  Qui & Responsable: TS. Soutien de PB\\\hline
+  Statut & A faire.\\\hline
+\end{longtable}
 \end{document}
 
+\begin{longtable}{|l|p{7cm}|}\hline
+  Quoi & \\\hline
+  Quand  &  \\\hline
+  Difficult\'e & \\\hline
+  Priorit\'e &  \\\hline
+  Qui & Responsable:  Soutien de TS\\\hline
+  Statut & \\\hline
+\end{longtable}
