Ajout des docs ATGpr et Plotter.

--- a/eugene/doc/Doc.tex
+++ b/eugene/doc/Doc.tex
@@ -512,6 +512,7 @@ We now descrive each plugin, its behavior and parameters.
 \input{../SensorPlugins/EuStop/Doc.tex}
 \input{../SensorPlugins/StartConst/Doc.tex}
 \input{../SensorPlugins/NStart/Doc.tex}
+\input{../SensorPlugins/ATGpr/Doc.tex}
 \input{../SensorPlugins/StartWAM/Doc.tex}
 \input{../SensorPlugins/SpliceConst/Doc.tex}
 % A faire !
@@ -534,6 +535,7 @@ We now descrive each plugin, its behavior and parameters.
 % A faire !
 \input {../SensorPlugins/User/Doc.tex}
 \input {../SensorPlugins/GFF/Doc.tex}
+\input {../SensorPlugins/Plotter/Doc.tex}
 \input {../SensorPlugins/Tester/Doc.tex}
 
 \section{Command line flags}
