La doc inclus GCPlot

--- a/eugene/doc/Doc.tex
+++ b/eugene/doc/Doc.tex
@@ -536,6 +536,7 @@ We now descrive each plugin, its behavior and parameters.
 \input {../SensorPlugins/User/Doc.tex}
 \input {../SensorPlugins/GFF/Doc.tex}
 \input {../SensorPlugins/Plotter/Doc.tex}
+\input {../SensorPlugins/GCPlot/Doc.tex}
 \input {../SensorPlugins/Tester/Doc.tex}
 
 \section{Command line flags}
