--- a/eugene/doc/Fiches.tex
+++ b/eugene/doc/Fiches.tex
@@ -106,6 +106,15 @@
 \end{longtable}
 
 \begin{longtable}{|l|p{7cm}|}\hline
+  Quoi & EuGene.par est trop long ! On pourrait faire un include ou le couper en 2 (optimsation/Eugene)\\\hline
+  Quand  &  Dec 2003\\\hline
+  Difficult\'e & 1 sem \\\hline
+  Priorit\'e &  0.6\\\hline
+  Qui & Responsable: PB. Soutien de TS\\\hline
+  Statut & \\\hline
+\end{longtable}
+
+\begin{longtable}{|l|p{7cm}|}\hline
   Quoi Modifier d\'es\'equilibre des tailles de jeux d'apprentissage IG/Intron& \\\hline
   Quand  &  Septembre 2003\\\hline
   Difficult\'e & 2 jours \\\hline
