Remove the HTML output from the documentation because it is now too long.

--- a/eugene/doc/Doc.tex
+++ b/eugene/doc/Doc.tex
@@ -75,12 +75,8 @@ EXECUTION_TRACE1
 \end{Verbatim}
 
 If we want, we may ask for an HTML output using the \texttt{-ph} flag
-which also automatically generates a graphical output in PNG files.
-
-\begin{Verbatim}[fontsize=\scriptsize]
-EXECUTION_TRACE2
-\end{Verbatim}
-
+which also automatically generates a graphical output in PNG files.\\
+\\
 If the standard output is saved in a file (for example adding '> \texttt{SYNO\_ARATH.html}' at the end of the command line), the HTML file could then be browsed with your favorite browser.  
 
 \section{Using transcribed sequences}
@@ -139,7 +135,7 @@ another one because it was inconsistent with a sequence considered as
 more reliable.
 
 \begin{Verbatim}[fontsize=\scriptsize]
-EXECUTION_TRACE3
+EXECUTION_TRACE2
 \end{Verbatim}
 
 An additional postprocessing can be requested to the plugin using the
@@ -148,7 +144,7 @@ each transcribed sequence matching the gene and report its consistency
 with the prediction.
 
 \begin{Verbatim}[fontsize=\scriptsize]
-EXECUTION_TRACE4
+EXECUTION_TRACE3
 \end{Verbatim}
 
 One can see that 2 of the 5 transcribed sequences have been filtered.
@@ -196,7 +192,7 @@ for both EST and proteic similarities analysis. We again enforce the
 use of an intergenic mode on the beginning and end of the sequence.
 
 \begin{Verbatim}[fontsize=\scriptsize]
-EXECUTION_TRACE5
+EXECUTION_TRACE4
 \end{Verbatim}
 
 \section{Injecting further information}
@@ -219,7 +215,7 @@ If I use \EuGenie\ with the \texttt{-U} flag (and even without
 \texttt{-s}), we get the following prediction:
 
 \begin{Verbatim}[fontsize=\scriptsize]
-EXECUTION_TRACE6
+EXECUTION_TRACE5
 \end{Verbatim} 
 
 This type of plugin allows to explore alternative predictions. Eg. one
@@ -233,7 +229,7 @@ acceptor f 2966 0.0
 and to ask for a new prediction.
 
 \begin{Verbatim}[fontsize=\scriptsize]
-EXECUTION_TRACE7
+EXECUTION_TRACE6
 \end{Verbatim}
 
 Other plugins are described in the reference section of this document.
