debug (extra caracters)

--- a/eugene/doc/Doc.tex
+++ b/eugene/doc/Doc.tex
@@ -13,12 +13,12 @@
 
 \parskip 5pt plus 3pt minus 2pt 
 
-\newcommand{\EuGenie}{\textsc{EuG-bËne}}-A
+\newcommand{\EuGenie}{\textsc{EuGËne}}
 % comment one of the above line to hide or not the developpers documentation
 %\newcommand{\shrink}[1]{}   % hide text
 \newcommand{\shrink}[1]{#1} % no effect
 
-\author{Philipe Bardou, Marie-Jos-bÈe Cros, Sylvain Foissac, Annick Moisan,Thomas Schiex\\Biometry and AI Dept.\\ INRA Toulouse\\France}-A
+\author{Philipe Bardou, Marie-JosÈe Cros, Sylvain Foissac, Annick Moisan,Thomas Schiex\\Biometry and AI Dept.\\ INRA Toulouse\\France}
 
 \title{\EuGenie: an open gene finder for eukaryotes}
 
@@ -47,14 +47,14 @@ the paths to the executables).
 
 \begin{Verbatim}[fontsize=\scriptsize]
 > ./getsites4eugene.pl Sequences/SYNO_ARATH.fasta 
-started on sam d-bÈc 7 13:44:35 CET 2002-A
+started on sam dÈc 7 13:44:35 CET 2002
 
 processing Sequences/SYNO_ARATH.fasta
 
 NetStart [2*1 request(s)]: F1..R1..done
 NetGene2 [1   request(s)]: 1..FR..done
 SplicePredictor: done
-finished on sam d-bÈc 7 13:47:14 CET 2002-A
+finished on sam dÈc 7 13:47:14 CET 2002
 \end{Verbatim}
 
 The script creates the files that contains information about the
@@ -81,8 +81,7 @@ If the standard output is saved in a file (for example adding '> \texttt{SYNO\_A
 
 \section{Using transcribed sequences}
 
-If you want to exploit similarities with cDNA-b∆ST sequences, you have-A
-to inform \EuGenie\ of existing simiairities. These similarities
+If you want to exploit similarities with cDNA/EST sequences, you have to inform \EuGenie\ of existing simiairities. These similarities
 should be available in a file with the \texttt{.est} extension. The
 format of this file is described in the EST plugin
 section~\ref{plugest}. It can easily be created from an existing FASTA
